Closed Bug 248720 Opened 21 years ago Closed 21 years ago

Tabs do not change properly to reflect a new Tab set

Categories

(Camino Graveyard :: Tabbed Browsing, defect)

PowerPC
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Camino0.9

People

(Reporter: frasermac, Assigned: jpellico)

Details

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7) Gecko/20040623 Camino/0.8 Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7) Gecko/20040623 Camino/0.8 When changing from a set of tabs with less tabs than a previous set, for example from five tabs to three tabs, the new set will still show five five tabs with the first three tabs reflecting the chosen new tab set but the remaining two tabs being from the older set. Reproducible: Sometimes Steps to Reproduce: 1.Have a couple of tab sets with differing numbers of tabs in them. 2.Open the tab set with the larger number of tabs 3.Change the tab set to the one with fewer tabs Expected Results: The new tab set should show only those tabs in that set.
I'm inclined to agree that our current behavior is strange, so confirming. A tab-group is fundamentally different than a single bookmark; unless the group is being opened in *new* tabs by user request, I agree that the expected behavior is that the tab group will become the new state of the window. The current behavior is hard to predict by a user, since it requires them to remember all their tab group page counts. Also, I can't think of case where this would be the desired behavior. Nominating for 0.9 so this can be fixed during / as a result of bookmark cleanup.
Severity: normal → minor
Status: UNCONFIRMED → NEW
Ever confirmed: true
Target Milestone: --- → Camino0.9
Assignee: pinkerton → jpellico
taking
Status: NEW → ASSIGNED
Patch coming up. There are several places in the code that open a set of tabs, replacing existing ones, such as drag-and-drop. Is the Tab Group the only place where extra tabs should be closed? My patch currently alters the behavior only for opening a Tab Group.
Attached patch fix for tab groups (obsolete) — Splinter Review
Ack, I probably should've just used ints.
Jasper and Geoff, do you have any response to comment #3?
(In reply to comment #6) > Jasper and Geoff, do you have any response to comment #3? I think a tab group is a special case, and would say that this behavior is only appropriate when the tab group is opened normally. If it's opened in "new tabs" this behavior should not apply... please check to be sure this patch doesn't do that. (I have not tested.)
Attached patch close extra tabsSplinter Review
I had a really stupid typo in the first patch. Don't know how I missed it. Anyways, this can be tested.
Attachment #163264 - Attachment is obsolete: true
Attachment #164069 - Flags: review?(me)
Attachment #164069 - Flags: review?(qa-mozilla)
Attachment #164069 - Flags: review?(qa-mozilla) → review+
This patch is against BrowserWindowController.mm 1.148; current is 1.149. It still appears to apply cleanly.
Comment on attachment 164069 [details] [diff] [review] close extra tabs Looks good, works as described. r=me@mollyandgeoff.com
Attachment #164069 - Flags: review?(me)
Attachment #164069 - Flags: superreview?(pinkerton)
Comment on attachment 164069 [details] [diff] [review] close extra tabs sr=pink
Attachment #164069 - Flags: superreview?(pinkerton) → superreview+
guess I forgot to land this... landed on trunk
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: