fix bug 248720 - tabs do not change properly to reflect a new tab set. sr=pinkerton